--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</style>
 	<script>
 		function sendMessage() {
-			var e = event || window.event;
+			var e = window.event;
 			e.source.postMessage("Button in iframe was clicked", e.origin);
 		}
 	</script>
