--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	</style>
 	<script>
 		function sendMessage() {
+			alert('sendMessage');
 			window.postMessage('message','*');
 		}
 	</script>
