--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<div class="button-container">
 		<div>
-			<button id="test-button" onclick="sendMessage">Click me</button>
+			<button id="test-button" onclick="sendMessage()">Click me</button>
 		</div>
 	</div>
 </body>
