change to top.postmessage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script>
 		function sendMessage() {
 			alert('sendMessage');
-			window.postMessage('message','*');
+			top.postMessage('message','*');
 		}
 	</script>
 </head>
