change origin to SM

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script>
 		function sendMessage() {
 			alert('sendMessage');
-			top.postMessage('message','*');
+			top.postMessage('message','SM');
 		}
 	</script>
 </head>
